--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #0f5074;
+    color: #ffffff;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #ff0000;
+    color: #ffffff;
     padding: 10px 0;
     text-align: center;
 }
@@ -22,7 +24,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -32,8 +34,8 @@ section {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #ff0000;
+    color: #ffffff;
     padding: 10px 0;
     text-align: center;
 }
